--- a/src/members/member-picker.html
+++ b/src/members/member-picker.html
@@ -12,7 +12,7 @@
                 <div class="checkbox">
                     <label t="[title]members.make-profile-photo" for="set-as-profile-photo">
                     <input id="set-as-profile-photo" type="checkbox" value.bind="make_profile_photo" checked.bind="make_profile_photo">
-                    ${'members.set-as-profile-photo' | t}
+                    ${'members.set-as-profile-photo' & t}
                  </label>
                 </div>
             </div>
