--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -26,7 +26,7 @@
                 </span>
             </button>
             <span css="position:absolute;color:white;direction:rtl;width:${slide.width}px;float:right;">
-                ${photo_info.name}.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${'photos.photographer' | t}:&nbsp;${photo_info.photographer}.
+                ${photo_info.name}.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${'photos.photographer' & t}:&nbsp;${photo_info.photographer}.
             </span>
         </div>
     </div>
