--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -6,10 +6,10 @@
         <div class="col-md-6 family-chains">
             <div class="row">
                 <div class="col-md-6">
-                    <a type="button" class="btn btn-default" style="height:32px;padding-top:2px;font-size:16px;" click.trigger="find_father()">${'members.father' | t}</a>
+                    <a type="button" class="btn btn-default" style="height:32px;padding-top:2px;font-size:16px;" click.trigger="find_father()">${'members.father' & t}</a>
                 </div>
                 <div class="col-md-6" style="padding-right:0px;">
-                    <a type="button" class="btn btn-default" style="height:32px;padding-top:2px;font-size:16px;" click.trigger="find_mother()">${'members.mother' | t}</a>
+                    <a type="button" class="btn btn-default" style="height:32px;padding-top:2px;font-size:16px;" click.trigger="find_mother()">${'members.mother' & t}</a>
                 </div>
             </div>
         </div>
@@ -73,7 +73,7 @@
                     <div class="col-md-6" style="padding-left:0;">
                         <partial-date date_str.two-way="member.member_info.date_of_death_str" id="date-of-death"></partial-date>
                     </div>
-                    <label class="control-label col-md-6" style="padding-right:0;" for="date-of-death">${'members.date-of-death' | t}:</label>
+                    <label class="control-label col-md-6" style="padding-right:0;" for="date-of-death">${'members.date-of-death' & t}:</label>
                 </div>
             </div>
             <!--The right wing of the form-->
@@ -98,7 +98,7 @@
                     <div class="col-md-6" style="padding-left:0;">
                         <partial-date date_str.two-way="member.member_info.date_of_birth_str" id="date-of-birth"></partial-date>
                     </div>
-                    <label class="control-label col-md-6" style="padding-right:0;" for="date-of-birth">${'members.date-of-birth' | t}:</label>
+                    <label class="control-label col-md-6" style="padding-right:0;" for="date-of-birth">${'members.date-of-birth' & t}:</label>
                 </div>
                 <div class="form-group">
                     <input type="text" class="form-control" id="nick_name" t="[placeholder]members.nick-name" value.bind="member.member_info.NickName">
@@ -107,7 +107,7 @@
                     <div class="col-md-6" style="padding-left:0;">
                         <selector dict.bind="api.constants.visibility" selectedval.two-way="member.member_info.visibility"></selector>
                     </div>
-                    <label class="control-label col-md-6" style="padding-right:0;" for="date-of-birth">${'members.visibility' | t}:</label>
+                    <label class="control-label col-md-6" style="padding-right:0;" for="date-of-birth">${'members.visibility' & t}:</label>
                 </div>
             </div>
         </form>
