--- a/src/members/members.html
+++ b/src/members/members.html
@@ -4,8 +4,8 @@
     <section class="container content-area">
         <div class="row top-head" css="margin-top:60px;background-image:url('${theme.files.top_background}');height:96px;">
             <div style="padding-top:0px;padding-right:15px;">
-                <h1 if.bind="caller_type" dir="rtl">${'members.' + caller_type | t}</h1>
-                <h1 if.bind="!caller_type" dir="rtl">${"members.members" | t}</h1>
+                <h1 if.bind="caller_type" dir="rtl">${'members.' + caller_type & t}</h1>
+                <h1 if.bind="!caller_type" dir="rtl">${"members.members" & t}</h1>
             </div>
         </div>
         <div>
@@ -31,12 +31,12 @@
                         </div>
                         <div if.bind="caller_type" class="input-group" style="padding-top:16px;" class="input-gorup">
                             <button class="btn btn-success" click.trigger="save_member_group()">
-                                ${'members.back-to-' + caller_type | t}
+                                ${'members.back-to-' + caller_type & t}
                             </button>
                         </div>
                         <div if.bind="selected_members.size == 1 && !caller_type" class="input-group" style="padding-top:16px;" >
                             <button class="btn btn-primary" click.trigger="toggle_relatives_mode()">
-                                ${ (relatives_mode ? 'members.all-members' : 'members.family-only') | t}
+                                ${ (relatives_mode ? 'members.all-members' : 'members.family-only') & t}
                             </button>
                         </div>
                         <div class="input-group" style="padding-top:16px;" if.bind="relatives_mode">
