--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -1,49 +1,55 @@
 <template>
     <a href if.bind="! user.isLoggedIn" click.trigger="login()" class="border-right" style="text-decoration:none;color:black">
         <i class="fa fa-play"></i>
-        ${'user.login' | t}
+        ${'user.login' & t}
     </a>
     <a href if.bind="user.isLoggedIn" click.trigger="logout()" class="border-right" style="text-decoration:none;color:black">
         <i class="fa fa-play fa-rotate-180"></i>
-        ${'user.logout' | t}
+        ${'user.logout' & t}
     </a>
-    <help topic="introduction" position="bottom"
-        style="margin:0;padding:0;border-right:1px solid gray;">
+    <help topic="introduction" position="bottom" style="margin:0;padding:0;border-right:1px solid gray;">
     </help>
-    <div class="btn-group dropdown border-right" style="padding:0;margin-right:26px;" 
-        aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)">
-        <button class="btn btn-link btn-md dropdown-toggle" t="[title]user.font-size" style="text-decoration:none;position:relative" aubs-dropdown-toggle>
-            <span style="position:absolute;left:20px;top:-8px;" class="font-size-150">${'a' | t}</span>
-            <span style="position:absolute;left:13px;top:0px" class="font-size-100">${'a' | t}</span>
+    <div class="btn-group dropdown border-right" style="padding:0;margin-right:26px;" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)">
+        <button class="btn btn-link btn-md dropdown-toggle" t="[title]user.font-size" style="text-decoration:none;position:relative"
+            aubs-dropdown-toggle>
+            <span style="position:absolute;left:20px;top:-8px;" class="font-size-150">${'a' & t}</span>
+            <span style="position:absolute;left:13px;top:0px" class="font-size-100">${'a' & t}</span>
             <span style="position:absolute;left:36px;top:10px;"class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-left">
-            <li class="font-size-100"><a class="dropdown-item" href="#" click.trigger="set_font_size(100)">${'abcde' | t}</a></li>
-            <li class="font-size-110"><a class="dropdown-item" href="#" click.trigger="set_font_size(110)">${'abcde' | t}</a></li>
-            <li class="font-size-120"><a class="dropdown-item" href="#" click.trigger="set_font_size(120)">${'abcde' | t}</a></li>
-            <li class="font-size-130"><a class="dropdown-item" href="#" click.trigger="set_font_size(130)">${'abcde' | t}</a></li>
-            <li class="font-size-140"><a class="dropdown-item" href="#" click.trigger="set_font_size(140)">${'abcde' | t}</a></li>
-            <li class="font-size-150"><a class="dropdown-item" href="#" click.trigger="set_font_size(150)">${'abcde' | t}</a></li>
-            <li style="padding-left:10px;padding-right:10px;" if.bind="theme.askLanguage || user.privileges.DEVELOPER" >
-                <locale-picker></locale-picker>
+            <li class="font-size-100"><a class="dropdown-item" href="#" click.trigger="set_font_size(100)">${'abcde' & t}</a></li>
+            <li class="font-size-110"><a class="dropdown-item" href="#" click.trigger="set_font_size(110)">${'abcde' & t}</a></li>
+            <li class="font-size-120"><a class="dropdown-item" href="#" click.trigger="set_font_size(120)">${'abcde' & t}</a></li>
+            <li class="font-size-130"><a class="dropdown-item" href="#" click.trigger="set_font_size(130)">${'abcde' & t}</a></li>
+            <li class="font-size-140"><a class="dropdown-item" href="#" click.trigger="set_font_size(140)">${'abcde' & t}</a></li>
+            <li class="font-size-150"><a class="dropdown-item" href="#" click.trigger="set_font_size(150)">${'abcde' & t}</a></li>
+        </ul>
+    </div>
+
+    <div class="btn-group dropdown border-right" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="theme.askLanguage || user.privileges.DEVELOPER">
+        <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
+            <i class="fa fa-globe"></i>
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-left" disabled.bind="isChangingLocale">
+            <li repeat.for="locale of locales">
+                <a class="dropdown-item" href="#" click.trigger="change_locale(locale)">
+                    ${'locales.' + locale & t}
+                </a>
             </li>
         </ul>
     </div>
-    
-    <a if.bind="user.privileges.EDITOR" href click.trigger="toggle_edit_mode()" 
-        title="${user.editing ? 'user.no-edit' : 'user.can-edit' | t}" 
-        class="border-right ${user.editing ? 'highlight' : ''}"
-        style="border-left:1px solid gray;padding-left:10px;">
+
+    <a if.bind="user.privileges.EDITOR" href click.trigger="toggle_edit_mode()" title="${user.editing ? 'user.no-edit' : 'user.can-edit' & t}"
+        class="border-right ${user.editing ? 'highlight' : ''}" style="border-left:1px solid gray;padding-left:10px;">
         <i class="fa fa-lg ${user.editing ? 'fa-eye highlight' : 'fa-pencil' }"></i>
     </a>
 
-    <a if.bind="user.privileges.CHATTER" href click.trigger="chat_rooms()" t="[title]user.chat-rooms"
-        class="border-right">
+    <a if.bind="user.privileges.CHATTER" href click.trigger="chat_rooms()" t="[title]user.chat-rooms" class="border-right">
         <i class="fa fa-lg fa-group"></i>
     </a>
 
-    <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" 
-        if.bind="user.privileges.HELP_AUTHOR ||user.privileges.ADMIN || user.privileges.DEVELOPER || user.privileges.ACCESS_MANAGER">
+    <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="user.privileges.HELP_AUTHOR ||user.privileges.ADMIN || user.privileges.DEVELOPER || user.privileges.ACCESS_MANAGER">
         <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
             <i class="fa fa-cog"></i>
             <span class="caret"></span>
