--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -2,15 +2,15 @@
     <section class="container content-area" css="height: ${win_height-600}px;">
         <div class="row" style="margin-top:30px;background-image:url('${theme.files.top_background}');background-repeat:no-repeat">
             <div style="background-color:rgba(120, 120, 120, 0.3);height:95px;padding-top:20px;padding-right:15px;">
-                <h1 dir="rtl"> ${"photos.photos-store" | t}</h1>
+                <h1 dir="rtl"> ${"photos.photos-store" & t}</h1>
             </div>
         </div>
         <div class="row content-area" style="height:300px;width:100%;margin-top:20px;" dir="rtl">
             <div class="row">
                 <div class="col-md-1" css="padding-top: 40px;position:relative">
-                    <span css="position:absolute">${'photos.more' | t}</span>
+                    <span css="position:absolute">${'photos.more' & t}</span>
                     <input type="range" id="range" min="4" max="32" step="1" change.trigger="slider_changed()" value.bind="photos_per_line" />
-                    <span css="position:absolute">${'photos.less' | t}</span>
+                    <span css="position:absolute">${'photos.less' & t}</span>
                 </div>
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;">
@@ -20,7 +20,7 @@
                             </div>
                             <div class="form-group" if.bind="phase=='can-modify-tags'">
                                 <button class="btn btn-basic btn-md" click.trigger="save_merges($event)">
-                                    ${'photos.save-merges' | t}
+                                    ${'photos.save-merges' & t}
                                 </button>
                                 <help topic="photos.can-modify-tags", position="bottom"></help>
                             </div>
@@ -38,7 +38,7 @@
                                      disabled.bind="params.grouped_selected_topics.length>0 || (params.selected_topics.length==0 && params.selected_photographers.length != 1)"
                                      class="btn btn-basic btn-md"
                                      click.trigger="apply_to_selected()">
-                                     ${'photos.apply-to-selected' | t}
+                                     ${'photos.apply-to-selected' & t}
                                 </button>
                                 <help topic="apply-to-selected-photos" position="bottom"></help>
                             </div>
@@ -46,7 +46,7 @@
                                 <button 
                                     click.trigger="finish_selecting()"
                                     class="btn btn-basic btn-md">
-                                    ${'photos.done-selecting' | t}
+                                    ${'photos.done-selecting' & t}
                                 </button>
                                 <help topic="done-selecting-photos" position="bottom"></help>
                             </div>
