--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -15,7 +15,7 @@
             </div>
         </div>
 
-        <a repeat.for="slide of slides" interact-draggable interact-dragend.delegate="shift_photos($event)" style="float:right;z-index:100;" >
+        <a repeat.for="slide of slides" interact-draggable.bind="interactable: { preventDefault: 'never' }" interact-dragend.delegate="shift_photos($event)" style="float:right;z-index:100;" >
             <img id="img-${slide.photo_id}" click.trigger="on_click(slide, $event)" src="${slide.src}" height="${height}" style="width:initial;" aubs-tooltip="text.bind:slide.title" />
         </a>
     </div>
