--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -120,14 +120,12 @@
                             </select>
                         </form>
                     </div>
-                    <div class="row" style="margin-top: 10px;float:right;margin-right:18px;" if.bind="user.editing">
-                        <form role="form" class="form-inline">
-                            <date-range label.bind="'photos.photo-date'" base_date_str.bind="photo_date_str" date_span_size.bind="photo_date_span_size"></date-range>
-                        </form>
+                    <div class="row" style="margin-top: 10px;float:right;" if.bind="can_set_dates">
+                        <date-range label.bind="'photos.photo-date'" base_date_str.bind="params.photos_date_str" date_span_size.bind="params.photos_date_span_size"></date-range>
                     </div>
                 </div>
             </div>
-            <div class="row" style="width:100%;" if.bind="!user.editing">
+            <div class="row" style="width:100%;" if.bind="!can_set_dates">
                 <timeline first_year.bind="params.first_year" last_year.bind="params.last_year" change.delegate="time_range_changed($event)"></timeline>
             </div>
         </div>
