photos dates - wip

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <title>Aurelia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>-->
   <script src="https://use.fontawesome.com/44d9dd0a37.js"></script>
   <link href="froala-style/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
   <link href="froala-style/froala-editor/css/froala_style.min.css" rel="stylesheet" type="text/css" />
