--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="form-group" if.bind="phase=='applying-to-photos'">
                                 <button 
-                                    disabled.bind="params.grouped_selected_topics.length>0 || (params.selected_topics.length==0 && params.selected_photographers.length != 1)"
+                                    disabled.bind="params.grouped_selected_topics.length>0 || (params.selected_topics.length==0 && params.selected_photographers.length != 1 && params.photos_date_str == '')"
                                     class="btn btn-basic btn-md" 
                                     click.trigger="apply_to_selected()">
                                     ${'photos.apply-to-selected' & t}
