--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -28,7 +28,7 @@
 
     <div class="btn-group dropdown border-right" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="theme.askLanguage || user.privileges.DEVELOPER">
         <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
-            <i class="fa fa-globe"></i>
+            <i class="fa fa-lg fa-globe"></i>
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-left" disabled.bind="isChangingLocale">
@@ -51,7 +51,7 @@
 
     <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="user.privileges.HELP_AUTHOR ||user.privileges.ADMIN || user.privileges.DEVELOPER || user.privileges.ACCESS_MANAGER">
         <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
-            <i class="fa fa-cog"></i>
+            <i class="fa fa-lg fa-cog"></i>
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-left">
