messages deletion. videos on home page.

--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="center-block">
                     <nav class="navbar navbar-default navbar-fixed-top navbar-centered sb-navbar" role="navigation" style="background-color:white">
-                        <div class="navbar-header navbar-right" style="margin-left: 20px;padding-bottom:8px;">
+                        <div class="navbar-header navbar-right" style="padding-bottom:8px;">
                             <a class="navbar-brand" href="#">
                                 <span style="font-size:200%;">
                                     ${router.title & t}
