--- a/src/home/home.html
+++ b/src/home/home.html
@@ -57,7 +57,8 @@
             </h2>
             <ul class="message" style="margin:0;padding:0;">
                 <li repeat.for="msg of message_list" dir="rtl" style="border-bottom: solid 2px gray;margin-bottom:10px;" >
-                    <editable story.bind="msg" settings.bind="{show_date:true}"></editable>
+                    <editable story.bind="msg" settings.bind="{show_date:true, deletable: true}"
+                        change.delegate="hande_story_change(msg, $event)"></editable>
                 </li>
             </ul>
         </div>
