--- a/src/user/login.html
+++ b/src/user/login.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="centered-form" dir="rtl" style="background-color:lightgray;">
+    <div class="centered-form" dir="${theme.rtltr}" style="background-color:lightgray;">
         <div>
             <div class="panel panel-default">
                 <div class="panel-heading">
